[gd_scene load_steps=2 format=3 uid="uid://qe7o6vl32m02"]

[ext_resource type="Script" path="res://Game/UI/ability_upgrade_card.gd" id="1_sx3jg"]

[node name="AbilityUpgradeCard" type="PanelContainer"]
custom_minimum_size = Vector2(120, 150)
script = ExtResource("1_sx3jg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="LabelName" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="LabelDescription" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
autowrap_mode = 2
